...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Location" id="N3N-bP-g72"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Kuv-TY-BTd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="FeedTable" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MKy-8n-XCN" userLabel="feed">
                                <rect key="frame" x="0.0" y="44" width="414" height="800"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="center" restorationIdentifier="ComicCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ComicCell" id="wJq-B8-SRr" userLabel="Comic Cell" customClass="ComicCell" customModule="Assessment" customModuleProvider="t
                                        <rect key="frame" x="0.0" y="128.33333587646484" width="414" height="1048"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                                <constraint firstAttribute="height" constant="20" id="cgZ-M9-JdB"/>
                                                            </constraints>
                                                            <state key="normal" title="more" image="more"/>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jBU-Kb-Nx7">
...
                                                                <constraint firstAttribute="width" constant="30" id="tLQ-Nf-HQC"/>
                                                            </constraints>
                                                            <state key="normal" title="like" image="like"/>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="usz-Iz-i3H">
...
                                                                <constraint firstAttribute="height" constant="30" id="mxR-lQ-9VY"/>
                                                            </constraints>
                                                            <state key="normal" title="share" image="share"/>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8xR-dd-Wv4">
...
                                                                <constraint firstAttribute="width" constant="30" id="ydF-bc-7m5"/>
                                                            </constraints>
                                                            <state key="normal" title="Button" image="comment"/>
                                                        </button>
                                                    </subviews>
...
                        <viewLayoutGuide key="safeArea" id="upJ-Vu-IlF"/>
                    </view>
                    <navigationItem key="navigationItem" title="Channels" id="gW3-IA-7I1">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="profile" id="2CG-jO-9au"/>
                        <rightBarButtonItems>
                            <barButtonItem title="Item" image="notif" id="Ltf-3V-K1i"/>
...
            <objects>
                <navigationController id="bFW-g0-plH" userLabel="Feed Navigation Controller" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="home" id="N9Q-EH-Qdf">
                        <color key="badgeColor" name="rw-dark"/>
                    </tabBarItem>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add" id="0Me-1e-Gqx"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Pva-Mr-I9B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
            <objects>
                <navigationController id="7pW-7R-OVa" userLabel="Category Navigation Controller" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Category" image="archive" id="YYC-EE-7gh">
                        <color key="badgeColor" name="rw-dark"/>
                    </tabBarItem>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Chat" id="cH5-Vb-zrC"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Xef-fP-Nsu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
